<resources>
    <string name="app_name">News</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Rafraichir</string>
    <string name="action_settings">Paramètres</string>

    <!-- NAVIGATION BAR -->
    <string name="menu_all_news">News</string>
    <string name="title_magazine">Magazines</string>
    <string name="menu_eurosport">Eurosport</string>
    <string name="menu_lequipe">L\'equipe</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_deconnexion">Deconnexion</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_register_error">Impossible to register this user</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="item_share_action">Share via</string>

    // KEY
    <string name="preference_file_key">com.esgi.android.news.preference_key</string>
    <string name="user_id_key">com.esgi.android.news.preference_user_id</string>

    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_item_webview">Webview</string>


</resources>
