<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_all" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/menu_all_news" />
    </group>

    <item android:title="@string/title_magazine">
        <menu>
            <item android:id="@+id/nav_eurosport" android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/menu_eurosport" />
            <item android:id="@+id/nav_lequipe" android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/menu_lequipe" />
            <item android:id="@+id/nav_favorite" android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/menu_favorite" />
            <item android:id="@+id/nav_deconnexion" android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/menu_deconnexion" />
        </menu>
    </item>

</menu>